--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,8 @@
         body {
             font-size: 16px;
             width: 300px;
-            background-color: #08B0D5;
+            color: #000000;
+            background-color: #F26A14;
         }
 
         .kofi-icon {
